Font jump in title fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   src: url('/fonts/KMRApparat-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -16,7 +16,7 @@
   src: url('/fonts/KMRApparat-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @theme inline {
